# tree-sitter-tester

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json  文字提示模板.txt
bindings/c/: tree-sitter-tester.pc.in
bindings/c/tree_sitter/: tree-sitter-tester.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tester/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTesterTests/: TreeSitterTesterTests.swift
src/: grammar.json  node-types.json  parser.c
